# coding_collects

./: .gitignore  Pipfile  README.md  exercism_download.py  pyproject.toml  requirements.txt
104_bk/python3_test/: test.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py  test09.py  test10.py  test11.py  test12.py  test13.py
Arcade/Intro/: Make_array_consecutive_2.py  add.py  adjacentElementsProduct.py  almostIncreasingSequence.py  checkPalindrome.py  shapeArea.py
System programming/linux_kernel/: example_daemon01.c  example_daemon03.cpp  example_daemon06.py  example_daemon07.py  example_daemon08.py
basic/: add_two_numbers01.py  add_two_numbers03.py  add_two_numbers04.py  conditions01.py  fibonacci01.py  functions01.py  if_else01.py  list_stacks01.py  print02.py  print03.py  print04.py  print05.py  print06.py  print07.py  print_list02.py  print_list03.py  print_list04.py  print_list06.py  strings01.py
basic/bash/: cleanup01.sh  test_constructs01.sh
basic/c/: Makefile  README.md  char01.c  ex_data_type01.c  ex_data_type02.c  ex_printf01.c  ex_printf02.c  ex_scanf01.c  ex_scanf02.c  ex_scanf03.c  exchange_int01.c  exchange_int02.c  exchange_int03.c  funny01.c  funny02.c  hello02.c  hello03.c  hello04.c  hello05.c  hello06.c  (+4 more)
leetcode/: climbing-stairs01.py
linux/: example_daemon02.c  example_daemon04.rs  example_daemon05.go
scripts/: bats_setup.sh  exercism_download.sh  exercism_run.sh  exercism_setup.sh  exercism_submit.sh  setup.sh
shell_scrips/: curl_01.sh  docker_minisign.sh  fun01.sh  log_03.sh  log_05.sh  log_06.sh
(+263 files in other folders)
